# coursework_3

./: .gitignore  database.ini  main.py  pyproject.toml
src/: data_collector.py  database_manager.py  dbmanager.py
