[project]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = [
    {name = "Rustam Abuzyarov",email = "rustamabuzarov56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
  )/
)
'''
[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv, tests"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]
